updated the framework to skeleton

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
   </head>
 
-  <body class="raise-good-homepage">
-    <a href="#" class="button">Button 1</a>
-    
+  <body class="raise-good-homepage">    
     <div class="contain-to-grid fixed">
       <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
@@ -71,16 +69,16 @@
       <div class="container">
         <div class="row">
           <h3>Featured raiseGood Fundraisers</h3>
-          <div class="small-12 large-3 columns">
+          <div class="one-third column">
             <img src="images/elipic.png">
             <li><a href="#" class="nav-link">Eli's Texas Red Dirt Music Album
             </a></li>  
           </div> 
-          <div class="large-3 small-12 columns">
+          <div class="one-third column">
             <img src="images/adoptcouple.png">
             <li><a href="#" class="nav-link">Campbell Family Adoption</a></li>
           </div>
-          <div class="large-3 small-12 columns">
+          <div class="one-third column">
             <img src="images/mission-girl.png">
             <li><a href="#" class="nav-link">Kathleen's Mission</a></li>
           </div>
