added some sass

--- a/index.html
+++ b/index.html
@@ -4,42 +4,19 @@
     <title>Raise Good</title>
 
     <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,600' rel='stylesheet' type='text/css'>
     <!--[if IE]>
         <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <![endif]-->
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/modernizr/modernizr.js"></script>
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
 
   </head>
 
-  <body class="raise-good-homepage">    
-    <div class="contain-to-grid fixed">
-      <nav class="top-bar" data-topbar role="navigation">
-        <ul class="title-area">
-          <li class="name">
-            <h1><a href="#"><img src="images/logo.png"></a></h1>
-          </li>
-          <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
-        </ul>
-        <section class="top-bar-section">
-          <!-- Right Nav Section -->
-          <ul class="right">
-            <li><a href="#">Sign Up</a></li>
-            <li><a href="#">Log In</a></li>
-          </ul>
-          <!-- Left Nav Section -->
-          <ul class="left">
-            <li><a href="#">Browse</a></li>
-            <li><a href="#">Create</a></li>
-            <li><a href="#">Donate</a></li>
-          </ul>
-        </section>
-      </nav>
-    </div>
-
-    <!-- <header class="main-nav-header">
+  <body class="raise-good-homepage">
+    <header class="main-nav-header">
       <nav class="container">
         <ul class="left-nav">
           <li><a href="#" class="logo">
@@ -54,58 +31,54 @@
           <li><a href="#" class="right-link">Log In</a></li>
         </ul>
       </nav>
-    </header> -->
+    </header>  
 
     <div class="main-header-image">
       <div class="main-header container">
-        <div class="row">
           <h1>raiseGood in the World</h1>
           <h5><a href="#" class="large-button-blue">Get Started Now</a></h5>
         </div>
       </div>
     </div>
 
-    <div class="features">
-      <div class="container">
-        <div class="row">
-          <h3>Featured raiseGood Fundraisers</h3>
-          <div class="one-third column">
-            <img src="images/elipic.png">
-            <li><a href="#" class="nav-link">Eli's Texas Red Dirt Music Album
-            </a></li>  
-          </div> 
-          <div class="one-third column">
-            <img src="images/adoptcouple.png">
-            <li><a href="#" class="nav-link">Campbell Family Adoption</a></li>
-          </div>
-          <div class="one-third column">
-            <img src="images/mission-girl.png">
-            <li><a href="#" class="nav-link">Kathleen's Mission</a></li>
-          </div>
+    <div class="features container">
+      <h3>Featured raiseGood Fundraisers</h3>
+      <div class="features-images">
+        <div class="one-third column">
+          <img src="images/elipic.png">
+          <a href="#" class="nav-link">Eli's Texas Red Dirt Music Album
+          </a>  
+        </div> 
+        <div class="one-third column">
+          <img src="images/adoptcouple.png">
+          <a href="#" class="nav-link">Campbell Family Adoption</a>
+        </div>
+        <div class="one-third column">
+          <img src="images/mission-girl.png">
+          <a href="#" class="nav-link">Kathleen's Mission</a>
         </div>
       </div>
     </div> 
 
     <div class="searchline container">
       <h4>Searching for a specific raiseGood fundraiser?</h4>
-      <li><a href="#" class="red-button">Browse Here</a></li>
+      <a href="#" class="red-button">Browse Here</a>
     </div>
 
     <div class="how-it-works">
       <div class="container">
-        <div class="row">
           <h3>How It Works</h3>
-          <div class="large-3 small-12 columns">
+          <div class="one-third column">
             <img src="images/create-icon.png">
             <h4>Create Fundraiser</h4>
             <p>Create your fundraiser in a few simple steps. Share your story and passion. Then upload some pictures to give a face to your cause!</p>
           </div>
-          <div class="large-3 small-12 columns">
+          <div class="one-third column">
             <img src="images/share-icon.png">
             <h4>Share Your Cause</h4> 
             <p>After you have created your fundraiser, you can share with your family, friends, and followers. Encourage them to share and you get the idea, before you know it, the world will know your passion.</p> 
           </div>
-          <div class="large-3 small-12 columns">
+          <div class="one-third column">
             <img src="images/collect.png">
             <h4>Collect Donations</h4>
             <p>Once your family, friends, and followers know your story, they have the opportunity to donate. You can track progress, deadlines, and donors. </p>
@@ -117,46 +90,46 @@
     <!--I AM NOT SURE HOW TO DO COLUMNS FOR THIS BECAUSE OF THE QUOTE BOX-->
     <div class="quote-red-bg">
       <div class="container">
-        <div class="row">
-          <div class="large-3 columns">
-            <img src="images/benpic.png">
-          </div>
-          <div class="large-3 columns">
-            <img src="images/healthgirl.png">
-          </div>
-          <div class="large-3 columns">
-            <img src="images/couple.png">
-          </div>
+        <div class="one-third column">
+          <img src="images/benpic.png">
         </div>
-        <div class="scrolling-quote">
-          <img src="images/Quote.png">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-        </div>   
-      </div> 
+        <div class="one-third column">
+          <img src="images/healthgirl.png">
+        </div>
+        <div class="one-third column">
+            <img src="images/couple.png">
+        </div>
+      </div>
+      <div class="scrolling-quote">
+        <img src="images/Quote.png">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+      </div>    
     </div>
 
     <div class="final-cta container">
       <h2>What will be your role to raiseGood in this World?
       </h2>
-      <li><a href="#" class="blue-button">Get Started Now</a></li>
+      <a href="#" class="blue-button">Get Started Now</a>
     </div>
 
     <div class="footer">
       <div class="container">
-        <div class="social-media">
-          <h3>Get connected. See what others are saying and stay up to date.</h3>
+        <h3>Get connected. See what others are saying and stay up to date.</h3>
+        <ul class="social-media">  
           <li><a href="http://www.twitter.com"><img src="images/twitter.png"></a></li>
           <li><a href="http://www.facebook.com"><img src="images/facebook.png"></a></li>
           <li><a href="http://www.instagram.com"><img src="images/instagram.png"></a></li>
-        </div>
-        <div class="nav-footer">
-          <img src="images/line.png">
+        </ul>
+      </div>  
+      <img src="images/line.png">
+      <div class="nav-footer container">
+        <ul class="footer-nav">
           <li><a href="#" class="nav-link">Browse</a></li>
           <li><a href="#" class="nav-link">Create</a></li>
           <li><a href="#" class="nav-link">Donate</a>
           </li>
-        </div>
-      </div>
+        </ul>
+      </div> 
     </div>  
 
     <script>
