fixed some styleing

--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
 
     <div class="main-header-image">
       <div class="main-header container">
-          <h1>raiseGood in the World</h1>
-          <h5><a href="#" class="large-button-blue">Get Started Now</a></h5>
+        <div class="row">
+          <div class="sixteen columns">
+            <div class="header-block-background ten column offset-by-three">
+                <h1>raiseGood in the World</h1>
+            </div>
+            <a href="#" class="button button-blue button-large">Get Started Now</a>
+          </div>
         </div>
       </div>
     </div>
