--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="main-nav-header">
       <nav class="container">
         <ul class="left-nav">
-          <li><a href="#" class="logo">
+          <!--<li><a href="#" class="logo">-->
             <img src="images/logo.png">
           </a></li>
           <li><a href="#" class="nav-link">Browse</a></li>
@@ -27,7 +27,7 @@
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
         <ul class="right-nav">
-          <li><a href="#" class="button-blue">Sign Up</a></li>
+          <li><a href="#" class="button button-blue button-small">Sign Up</a></li>
           <li><a href="#" class="right-link">Log In</a></li>
         </ul>
       </nav>
@@ -37,7 +37,7 @@
       <div class="main-header container">
         <div class="row">
           <div class="sixteen columns">
-            <div class="header-block-background ten column offset-by-three">
+            <div class="header-block-background ten column offset-by-two">
                 <h1>raiseGood in the World</h1>
             </div>
             <a href="#" class="button button-blue button-large">Get Started Now</a>
@@ -67,7 +67,7 @@
 
     <div class="searchline container">
       <h4>Searching for a specific raiseGood fundraiser?</h4>
-      <a href="#" class="red-button">Browse Here</a>
+      <a href="#" class="button button-red button-large">Browse Here</a>
     </div>
 
     <div class="how-it-works">
@@ -105,7 +105,7 @@
             <img src="images/couple.png">
         </div>
       </div>
-      <div class="scrolling-quote">
+      <div class="scrolling-quote container">
         <img src="images/Quote.png">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
       </div>    
@@ -114,7 +114,7 @@
     <div class="final-cta container">
       <h2>What will be your role to raiseGood in this World?
       </h2>
-      <a href="#" class="blue-button">Get Started Now</a>
+      <a href="#" class="button button-blue button-large">Get Started Now</a>
     </div>
 
     <div class="footer">
@@ -126,7 +126,9 @@
           <li><a href="http://www.instagram.com"><img src="images/instagram.png"></a></li>
         </ul>
       </div>  
-      <img src="images/line.png">
+      <div class="line">
+        <img src="images/line.png">
+      </div>
       <div class="nav-footer container">
         <ul class="footer-nav">
           <li><a href="#" class="nav-link">Browse</a></li>
