signup sass added

--- a/createfr1.html
+++ b/createfr1.html
@@ -19,18 +19,17 @@
     <header class="main-nav-header">
       <nav class="container">
         <ul class="left-nav">
-          <!--<li><a href="#" class="logo">-->
-            <img src="images/logo.png">
-          <!--</a></li>-->
+          <li>
+            <a href="#" class="logo"> <img src="images/logo.png"> </a></li>
           <li><a href="#" class="nav-link">Browse</a></li>
-          <li><a href="#" class="nav-link">Create</a></li>
+          <li><a href="createfr1.html" class="nav-link">Create</a></li>
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
         <ul class="right-nav">
-          <!--PROFILE PIC WITH DROPDOWN MENU HERE-->
+          <li><a href="#" class="right-link">Log In</a></li>
         </ul>
       </nav>
-    </header> 
+    </header>  
     <div class="signup-main">
       <div class="container">
         <h3>What type of fundraiser is this?</h3>
@@ -38,9 +37,8 @@
           <a href="#" class="button button-red button-small">Submit</a>
       </div>  
     </div>
-    <div class="line">
-      <img src="images/line.png">
-    </div>
+    <div class="divider"></div>
+    
     <div class="footer">
         <div class="footer-nav container">
           <li><a href="#" class="nav-link">Browse</a></li>
