--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
     <header class="main-nav-header">
       <nav class="container">
         <ul class="left-nav">
-          <!--<li><a href="#" class="logo">-->
-            <img src="images/logo.png">
-          <!--</a></li>-->
+          <li>
+            <a href="#" class="logo"> <img src="images/logo.png"> </a></li>
           <li><a href="#" class="nav-link">Browse</a></li>
-          <li><a href="#" class="nav-link">Create</a></li>
+          <li><a href="createfr1.html" class="nav-link">Create</a></li>
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
         <ul class="right-nav">
-          <li><a href="#" class="button button-blue button-small">Sign Up</a></li>
+          <li><a href="signup.html" class="button button-blue button-small">Sign Up</a></li>
           <li><a href="#" class="right-link">Log In</a></li>
         </ul>
       </nav>
@@ -40,7 +39,7 @@
             <div class="header-block-background ten column offset-by-two">
                 <h1>raiseGood in the World</h1>
             </div>
-            <a href="#" class="button button-blue button-large">Get Started Now</a>
+            <a href="signup.html" class="button button-blue button-large">Get Started Now</a>
           </div>
         </div>
       </div>
@@ -114,28 +113,30 @@
     <div class="final-cta container">
       <h2>What will be your role to raiseGood in this World?
       </h2>
-      <a href="#" class="button button-blue button-large">Get Started Now</a>
+      <a href="signup.html" class="button button-blue button-large">Get Started Now</a>
     </div>
 
     <div class="footer">
       <div class="container">
         <h3>Get connected. See what others are saying and stay up to date.</h3>
         <ul class="social-media">  
-          <li><a href="http://www.twitter.com"><img src="images/twitter.png"></a></li>
-          <li><a href="http://www.facebook.com"><img src="images/facebook.png"></a></li>
-          <li><a href="http://www.instagram.com"><img src="images/instagram.png"></a></li>
+          <li><a href="http://www.twitter.com"><img src="images/twitter1.png"></a></li>
+          <li><a href="http://www.facebook1.com"><img src="images/facebook.png"></a></li>
+          <li><a href="http://www.instagram.com"><img src="images/instagram1.png"></a></li>
         </ul>
-      </div>  
-      <div class="line">
-        <img src="images/line.png">
-      </div>
+      </div> 
+
+      <div class="divider"></div>
+
       <div class="nav-footer container">
-        <ul class="footer-nav">
-          <li><a href="#" class="nav-link">Browse</a></li>
-          <li><a href="#" class="nav-link">Create</a></li>
-          <li><a href="#" class="nav-link">Donate</a>
-          </li>
-        </ul>
+        <div class="row">
+          <ul class="footer-nav">
+            <li><a href="#" class="nav-link">Browse</a></li>
+            <li><a href="createfr1.html" class="nav-link">Create</a></li>
+            <li><a href="#" class="nav-link">Donate</a>
+            </li>
+          </ul>
+        </div>
       </div> 
     </div>  
 
