--- a/signup.html
+++ b/signup.html
@@ -19,11 +19,11 @@
     <header class="main-nav-header">
       <nav class="container">
         <ul class="left-nav">
-          <!--<li><a href="#" class="logo">-->
+          <li><a href="#" class="logo">
             <img src="images/logo.png">
-          <!--</a></li>-->
+          </a></li>
           <li><a href="#" class="nav-link">Browse</a></li>
-          <li><a href="#" class="nav-link">Create</a></li>
+          <li><a href="createfr1.html" class="nav-link">Create</a></li>
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
         <ul class="right-nav">
@@ -32,27 +32,33 @@
       </nav>
     </header>  
 
-    <div class="signup-main">
-      <div class="container">
-        <h3>Get Started</h3>
-          <input type="text" name="first-name" placeholder="First Name">
-          <input type="text" name="last-name" placeholder="Last Name">
-          <input type="email" name="email-address" placeholder="Email Address">
-          <a href="#" class="button button-blue button-box">Submit</a>
+    <div class="signup-main-image">
+      <div class="sign-up container">
+        <div class="header-block-background seven column offset-by-five">
+          <ul class="information">
+            <h3>Get Started</h3>
+            <input type="text" name="first-name" placeholder="First Name">
+            <input type="text" name="last-name" placeholder="Last Name">
+            <input type="email" name="email-address" placeholder="Email Address">
+            <a href="#" class="button button-blue button-box">Submit</a>
+
+            <a href="#" class="button button-fb button-box">Connect with Facebook</a>
+          </ul>
+        </div>
       </div>  
     </div>
-    <div class="line">
-      <img src="images/line.png">
-    </div>
-    <div class="footer">
-        <div class="footer-nav container">
-          <li><a href="#" class="nav-link">Browse</a></li>
-          <li><a href="#" class="nav-link">Create</a></li>
-          <li><a href="#" class="nav-link">Donate</a>
-          </li>
-        </div>
+    <div class="divider"></div>
 
-    </div>
+    <div class="nav-footer">
+        <div class="row">
+          <ul class="footer-nav">
+            <li><a href="#" class="nav-link">Browse</a></li>
+            <li><a href="createfr1.html" class="nav-link">Create</a></li>
+            <li><a href="#" class="nav-link">Donate</a>
+            </li>
+          </ul>
+        </div>
+      </div> 
 
     <script>
       $(document).foundation();
