--- a/signup.html
+++ b/signup.html
@@ -34,17 +34,20 @@
 
     <div class="signup-main-image">
       <div class="sign-up container">
-        <div class="header-block-background seven column offset-by-five">
-          <ul class="information">
-            <h3>Get Started</h3>
-            <input type="text" name="first-name" placeholder="First Name">
-            <input type="text" name="last-name" placeholder="Last Name">
-            <input type="email" name="email-address" placeholder="Email Address">
-            <a href="#" class="button button-blue button-box">Submit</a>
+          <div class="header-block-background seven column offset-by-five">
+            <ul class="information">
+              <h3>Get Started</h3>
+              <input type="text" name="first-name" placeholder="First Name">
+              <input type="text" name="last-name" placeholder="Last Name">
+              <input type="email" name="email-address" placeholder="Email Address">
+              <a href="#" class="button button-blue button-box">Submit</a>
 
-            <a href="#" class="button button-fb button-box">Connect with Facebook</a>
-          </ul>
-        </div>
+            <!-- <div class="divider"></div>-->
+
+              <a href="#" class="button button-fb button-box">Connect with Facebook</a>
+            </ul>
+          </div>
+        
       </div>  
     </div>
     <div class="divider"></div>
