beginnings of Create the Fundraiser

--- a/create4.html
+++ b/create4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sign Up | Raise Good</title>
+    <title>Create Fundraiser | Raise Good</title>
 
     <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
@@ -15,13 +15,12 @@
     
   </head>
 
-  <body class="signup-page">
+  <body class="createfour-page">
     <header class="main-nav-header">
       <nav class="container">
         <ul class="left-nav">
-          <li><a href="#" class="logo">
-            <img src="images/logo.png">
-          </a></li>
+          <li>
+            <a href="#" class="logo"> <img src="images/logo.png"> </a></li>
           <li><a href="#" class="nav-link">Browse</a></li>
           <li><a href="createfr1.html" class="nav-link">Create</a></li>
           <li><a href="#" class="nav-link">Donate</a></li>
@@ -31,23 +30,12 @@
         </ul>
       </nav>
     </header>  
-
-    <div class="signup-main-image">
-      <div class="sign-up container">
-          <div class="header-block-background seven column offset-by-five">
-            <ul class="information">
-              <h3>Get Started</h3>
-              <input type="text" name="first-name" placeholder="First Name">
-              <input type="text" name="last-name" placeholder="Last Name">
-              <input type="email" name="email-address" placeholder="Email Address">
-              <a href="#" class="button button-blue button-box">Submit</a>
-
-            <!-- <div class="divider"></div>-->
-
-              <a href="#" class="button button-fb button-box">Connect with Facebook</a>
-            </ul>
-          </div>
-        
+    <div class="create-main">
+      <div class="container">
+        <h3>Who is the manager of this account?</h3>
+        <div class="header-block-background six column offset-by-six">
+          <input type="text" name="manager-name" placeholder="Manager's Name">
+          <a href="#" class="button button-red button-small">Next</a>
       </div>  
     </div>
     <div class="divider"></div>
