javascript for create8

--- a/create6.html
+++ b/create6.html
@@ -10,6 +10,8 @@
         <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <![endif]-->
 
+    
+
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/modernizr/modernizr.js"></script>
     
@@ -34,7 +36,10 @@
       <div class="container">
         <h3>Tell Us the Story</h3>
           <div class="header-block-background six column offset-by-six">
-            <input type="text" name="story" placeholder="Give us a good reason to support your cause. Tell us your story.">
+            <!-- Label and textarea -->
+            <textarea id="regularTextarea" placeholder="Give us a good reason to support your cause. Tell us your story."></textarea>
+
+            <!--<input type="text" name="story" placeholder="Give us a good reason to support your cause. Tell us your story.">-->
             <a href="#" class="button button-red button-small">Next</a>
           </div>
       </div>  
