added some details

--- a/create1.html
+++ b/create1.html
@@ -15,7 +15,7 @@
     
   </head>
 
-  <body class="createthree-page">
+  <body class="createtwo-page">
     <header class="main-nav-header">
       <nav class="container">
         <ul class="left-nav">
@@ -32,9 +32,29 @@
     </header>  
     <div class="create-main">
       <div class="container">
-        <h3>Who is the recipient?</h3>
+        <h3>What is the name of this fundraiser?</h3>
         <div class="header-block-background six column offset-by-six">
-          <input type="text" name="recipient-name" placeholder="Recipient's Name">
+          <!--DROPDOWN MENU HERE-->
+          <label for="selectList">Select List</label>
+            <select id="selectList">
+            <option value="Option 1">Animals</option>
+            <option value="Option 2">Business</option>
+            <option value="Option 3">Charity</option>
+            <option value="Option 4">Community</option>
+            <option value="Option 5">Creative</option>
+            <option value="Option 6">Emergency</option>
+            <option value="Option 7">Event</option>
+            <option value="Option 8">Faith</option>
+            <option value="Option 9">Family</option>
+            <option value="Option 10">Medical</option>
+            <option value="Option 11">Memorial</option>
+            <option value="Option 12">Sports</option>
+            <option value="Option 13">Travel</option>
+            <option value="Option 14">Wishes</option>
+            <option value="Option 15">Volunteer</option>
+            <option value="Option 16">Other</option>
+          </select>
+
           <a href="#" class="button button-red button-small">Next</a>
       </div>  
     </div>
