--- a/create5.html
+++ b/create5.html
@@ -22,7 +22,7 @@
           <li>
             <a href="#" class="logo"> <img src="images/logo.png"> </a></li>
           <li><a href="#" class="nav-link">Browse</a></li>
-          <li><a href="createfr1.html" class="nav-link">Create</a></li>
+          <li><a href="create1.html" class="nav-link">Create</a></li>
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
         <ul class="right-nav">
@@ -49,7 +49,7 @@
         <div class="row">
           <ul class="footer-nav">
             <li><a href="#" class="nav-link">Browse</a></li>
-            <li><a href="createfr1.html" class="nav-link">Create</a></li>
+            <li><a href="create1.html" class="nav-link">Create</a></li>
             <li><a href="#" class="nav-link">Donate</a>
             </li>
           </ul>
