--- a/create7.html
+++ b/create7.html
@@ -22,7 +22,7 @@
           <li>
             <a href="#" class="logo"> <img src="images/logo.png"> </a></li>
           <li><a href="#" class="nav-link">Browse</a></li>
-          <li><a href="createfr1.html" class="nav-link">Create</a></li>
+          <li><a href="create1.html" class="nav-link">Create</a></li>
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
         <ul class="right-nav">
@@ -33,10 +33,8 @@
     <div class="create-main">
       <div class="container">
         <h3>What is the goal?</h3>
-          <div class="header-block-background six column offset-by-six">
-            <input type="text" name="goal" placeholder="Enter $(USD) amount here">
-            <a href="#" class="button button-red button-small">Next</a>
-          </div>
+          <input type="text" name="goal" placeholder="Enter $(USD) amount here">
+          <a href="#" class="button button-red button-small">Next</a>  
       </div>  
     </div>
     <div class="divider"></div>
@@ -45,7 +43,7 @@
         <div class="row">
           <ul class="footer-nav">
             <li><a href="#" class="nav-link">Browse</a></li>
-            <li><a href="createfr1.html" class="nav-link">Create</a></li>
+            <li><a href="create1.html" class="nav-link">Create</a></li>
             <li><a href="#" class="nav-link">Donate</a>
             </li>
           </ul>
