--- a/showpage.html
+++ b/showpage.html
@@ -22,7 +22,7 @@
           <li>
             <a href="#" class="logo"> <img src="images/logo.png"> </a></li>
           <li><a href="#" class="nav-link">Browse</a></li>
-          <li><a href="createfr1.html" class="nav-link">Create</a></li>
+          <li><a href="createfundraiserform.html" class="nav-link">Create</a></li>
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
         <ul class="right-nav">
