added profile menu at top of showpage

--- a/index.html
+++ b/index.html
@@ -45,22 +45,21 @@
       </div>
     </div>
 
-    <div class="features container">
+    <div class="features-heading container">
       <h3>Featured raiseGood Fundraisers</h3>
-      <div class="features-images">
-        <div class="one-third column">
-          <img src="images/elipic.png">
-          <a href="#" class="nav-link">Eli's Texas Red Dirt Music Album
-          </a>  
-        </div> 
-        <div class="one-third column">
-          <img src="images/adoptcouple.png">
-          <a href="#" class="nav-link">Campbell Family Adoption</a>
-        </div>
-        <div class="one-third column">
-          <img src="images/mission-girl.png">
-          <a href="#" class="nav-link">Kathleen's Mission</a>
-        </div>
+    </div>
+    <div class="features-images container">
+      <div class="one-third column">
+        <img src="images/elipic.png">
+        <a href="#" class="nav-link">Eli's Red Dirt Music Album</a>  
+      </div> 
+      <div class="one-third column">
+        <img src="images/adoptcouple.png">
+        <a href="#" class="nav-link">Campbell Family Adoption</a>
+      </div>
+      <div class="one-third column">
+        <img src="images/mission-girl.png">
+        <a href="#" class="nav-link">Kathleen's Mission</a>
       </div>
     </div> 
 
