--- a/showpage.html
+++ b/showpage.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Create Fundraiser | Raise Good</title>
+    <title>Fundraiser Showpage | Raise Good</title>
 
     <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+
+    <link href="stylesheets/dropdown.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,600' rel='stylesheet' type='text/css'>
     <!--[if IE]>
@@ -12,6 +14,48 @@
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/modernizr/modernizr.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>;
+    <script type="text/javascript" >
+    $(document).ready(function()
+    {
+
+    $(".account").click(function()
+    {
+    var X=$(this).attr('id');
+    if(X==1)
+    {
+    $(".submenu").hide();
+    $(this).attr('id', '0'); 
+    }
+    else
+    {
+    $(".submenu").show();
+    $(this).attr('id', '1');
+    }
+
+    });
+
+    //Mouse click on sub menu
+    $(".submenu").mouseup(function()
+    {
+    return false
+    });
+
+    //Mouse click on my account link
+    $(".account").mouseup(function()
+    {
+    return false
+    });
+
+
+    //Document Click
+    $(document).mouseup(function()
+    {
+    $(".submenu").hide();
+    $(".account").attr('id', '');
+    });
+    });
+    </script>
     
   </head>
 
@@ -25,8 +69,21 @@
           <li><a href="createfundraiserform.html" class="nav-link">Create</a></li>
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
+
         <ul class="right-nav">
-          <li><a href="#" class="right-link">Log In</a></li>
+          <div class="dropdown">
+            <a class="account" >Welcome, user!</a>
+            <div class="submenu">
+              <ul class="root">
+                <li ><a href="#Dashboard" >Following</a></li>
+                <li ><a href="#Profile" >Fundraisers</a></li>
+                <li ><a href="#settings">Donations</a></li>
+                <li ><a href="#feedback">Donations</a></li>
+                <li><a href="#editprofile">Edit Profile</a></li>
+                <li><a href="#logout">Log Out</a></li>
+              </ul>
+            </div>
+          </div>
         </ul>
       </nav>
     </header>  
