--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,7 @@
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
         <ul class="right-nav">
-          <li><a href="#" class="right-link">Log In</a></li>
+          <li><a href="#" class="right-navlink">Log In</a></li>
         </ul>
       </nav>
     </header>  
