changes to scss

--- a/index.html
+++ b/index.html
@@ -92,7 +92,33 @@
 
     <!--I AM NOT SURE HOW TO DO COLUMNS FOR THIS BECAUSE OF THE QUOTE BOX-->
     <div class="quote-red-bg">
-      <div class="container">
+      <div id="cbp-qtrotator" class="cbp-qtrotator">
+        <div class="cbp-qtcontent">
+          <img src="images/benpic.png" alt="img01" />
+          <blockquote>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+            <footer>Ben Jewell</footer>
+          </blockquote>
+        </div>
+        <div class="cbp-qtcontent">
+          <img src="images/healthgirl.png" alt="img02" />
+          <blockquote>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+            <footer>Rachel Watson</footer>
+          </blockquote>
+        </div>
+        <div class="cbp-qtcontent">
+          <img src="images/couple.png" alt="img03" />
+          <blockquote>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+            <footer>The Buckingham Family</footer>
+          </blockquote>
+        </div>
+      </div>
+    </div>
+
+
+      <!--<div class="container">
         <div class="one-third column">
           <img src="images/benpic.png">
         </div>
@@ -107,7 +133,7 @@
         <img src="images/Quote.png">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
       </div>    
-    </div>
+    </div>-->
 
     <div class="final-cta container">
       <h2>What will be your role to raiseGood in this World?
