stupid code makes background gray and form not work boo

--- a/createfundraiserform.html
+++ b/createfundraiserform.html
@@ -4,14 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<title>Fullscreen Form Interface</title>
+		<title>Create A Fundraiser | raiseGood</title>
 		<meta name="description" content="Fullscreen Form Interface: A distraction-free form concept with fancy animations" />
 		<meta name="keywords" content="fullscreen form, css animations, distraction-free, web design" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico">
-		<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" />
+		<!--<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="stylesheets/demo.css" />
-		<link rel="stylesheet" type="text/css" href="stylesheets/component.css" />
+		<link rel="stylesheet" type="text/css" href="stylesheets/createform.css" />-->
 	
 		<script src="js/modernizr.custom.js"></script>
 	</head>
@@ -114,7 +114,7 @@
 							<input class="fs-mark fs-anim-lower" id="q5" name="q5" type="number" placeholder="Enter $(USD) amount" step="100" min="100"/>
 						</li>
 					</ol><!-- /fs-fields -->
-					<button class="fs-submit" type="submit">Send answers</button>
+					<button class="fs-submit" type="submit">Create Now</button>
 				</form><!-- /fs-form -->
 			</div><!-- /fs-form-wrap -->
 		
