--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/modernizr/modernizr.js"></script>
+    <script src="js/qtrotator.js"></script>
 
   </head>
 
