--- a/showpage.html
+++ b/showpage.html
@@ -74,10 +74,9 @@
             <a class="account" >Welcome, user!</a>
             <div class="submenu">
               <ul class="root">
-                <li ><a href="#Dashboard" >Following</a></li>
-                <li ><a href="#Profile" >Fundraisers</a></li>
-                <li ><a href="#settings">Donations</a></li>
-                <li ><a href="#feedback">Donations</a></li>
+                <li ><a href="#following" >Following</a></li>
+                <li ><a href="#fundraisers" >Fundraisers</a></li>
+                <li ><a href="#donations">Donations</a></li>
                 <li><a href="#editprofile">Edit Profile</a></li>
                 <li><a href="#logout">Log Out</a></li>
               </ul>
@@ -85,4 +84,8 @@
           </div>
         </ul>
       </nav>
-    </header>  
+    </header> 
+  
+  <div class="showpage-image container">
+    
+  </div>    
