--- a/createfundraiserform.html
+++ b/createfundraiserform.html
@@ -9,13 +9,11 @@
 		<meta name="keywords" content="fullscreen form, css animations, distraction-free, web design" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico">
-		<!--<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="stylesheets/demo.css" />
-		<link rel="stylesheet" type="text/css" href="stylesheets/createform.css" />-->
+		<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 	
 		<script src="js/modernizr.custom.js"></script>
 	</head>
-	<body>
+	<body class="awesomeform">
 		<div class="container">
 
 			<div class="fs-form-wrap" id="fs-form-wrap">
