--- a/createfundraiserform.html
+++ b/createfundraiserform.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<title>Fullscreen Form Interface</title>
-		<meta name="description" content="Fullscreen Form Interface: A distraction-free form concept with fancy animations" />
-		<meta name="keywords" content="fullscreen form, css animations, distraction-free, web design" />
-		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="../favicon.ico">
-		<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="stylesheets/demo.css" />
-		<link rel="stylesheet" type="text/css" href="stylesheets/component.css" />
-	
-		<script src="js/modernizr.custom.js"></script>
+		<title>Create A Fundraiser | raiseGood</title>
+
+		<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+		<link href="stylesheets/application/create-form.css" media="screen, projection" rel="stylesheet" type="text/css" />
+		<link href="stylesheets/application/demo.css" media="screen, projection" rel="stylesheet" type="text/css" />
+		
+		<script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/modernizr/modernizr.js"></script>
+
+		<script src="js/classie.js"></script>
+		<script src="js/selectFx.js"></script>
+		<script src="js/fullscreenForm.js"></script>
+
 	</head>
-	<body>
+	<body class="awesomeform">
 		<div class="container">
 
 			<div class="fs-form-wrap" id="fs-form-wrap">
@@ -114,15 +114,13 @@
 							<input class="fs-mark fs-anim-lower" id="q5" name="q5" type="number" placeholder="Enter $(USD) amount" step="100" min="100"/>
 						</li>
 					</ol><!-- /fs-fields -->
-					<button class="fs-submit" type="submit">Send answers</button>
+					<button class="fs-submit" type="submit">Create Now</button>
 				</form><!-- /fs-form -->
 			</div><!-- /fs-form-wrap -->
 		
 
 		</div><!-- /container -->
-		<script src="js/classie.js"></script>
-		<script src="js/selectFx.js"></script>
-		<script src="js/fullscreenForm.js"></script>
+		
 		<script>
 			(function() {
 				var formWrap = document.getElementById( 'fs-form-wrap' );
