--- a/showpage.html
+++ b/showpage.html
@@ -58,7 +58,7 @@
     
   </head>
 
-  <body class="createone-page">
+  <body class="show-page">
     <header class="main-nav-header">
       <nav class="container">
         <ul class="left-nav">
@@ -86,6 +86,64 @@
       </nav>
     </header> 
   
-  <div class="showpage-image container">
+    <div class="showpage-image">
+
+      <img src="images/guitar.png">
     
-  </div>    
+    </div>    
+
+    <!--NOT SURE HOW TO DO THE COLUMNS. THOUGHT THIS WAS RIGHT-->
+    <div class="fundraiser-info container">
+      <div class="row">
+        <div class="sixteen columns">
+          <div class="about-fundraiser one-half column">
+            <h3>About this fundraiser</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+          </div>
+          <div class="stats-fundraiser one-half column">
+            <h3>$2500 raised</h3>
+            <img src="images/bargraph.png">
+            <h3>43 days to go | $3000 goal</h3>
+            <h4>Ends October 15, 2014</h4>
+            <a href="#" class="button button-blue button-large">Donate Now</a>
+            <a href="#" class="button button-red button-large">Share on Facebook</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="supporters container">
+      <h3>Supporters</h3>
+      <h4>Ben Jewell | $1000</h4>
+      <h5>My friend Eli will go far. He has such a passion and drive.  I am thrilled for this CD to be released.</h5>
+      <div class="divider"></div>
+      <h4>Ben Jewell | $1000</h4>
+      <h5>My friend Eli will go far. He has such a passion and drive.  I am thrilled for this CD to be released.</h5>
+      <div class="divider"></div>
+      <h4>Ben Jewell | $1000</h4>
+      <h5>My friend Eli will go far. He has such a passion and drive.  I am thrilled for this CD to be released.</h5>
+      <div class="divider"></div>
+    </div>
+
+    <div class="nav-footer">
+      <div class="divider"></div>
+        <div class="row">
+          <ul class="footer-nav">
+            <li><a href="#" class="nav-link">Browse</a></li>
+            <li><a href="createfundraiserform.html" class="nav-link">Create</a></li>
+            <li><a href="#" class="nav-link">Donate</a>
+            </li>
+          </ul>
+        </div>
+    </div> 
+   
+
+  </body>  
+
+
+
+
+
+
+
+
+
