--- a/editprofile.html
+++ b/editprofile.html
@@ -86,11 +86,13 @@
       </nav>
     </header> 
     <div class="user-image">
-        <img src="images/userprofilecover.png">
+        <div class="row">
+            <img src="images/userprofilecover.png">
+        </div>
     </div>
 
     <div class="edit-profile container">
-        <div class="one-third column">
+        <div class="one-fourth column">
             <label for="regularInput">First Name</label>
             <input type="text" id="regularInput" />
             <label for="regularInput">City</label>
@@ -98,7 +100,7 @@
             <label for="regularInput">Email Address</label>
             <input type="email" id="regularInput" />
         </div>
-        <div class="one-third column">
+        <div class="one-fourth column">
             <label for="regularInput">Last Name</label>
             <input type="text" id="regularInput" />
              <!-- Label and select list -->
@@ -158,15 +160,21 @@
             <label for="regularInput">Website</label>
             <input type="text" id="regularInput" />
         </div>
-        <div class="one-third column">
+        <div class="one-fourth column">
             <label for="regularInput">Upload Photo</label>
             <input type="text" id="regularInput" />
-            <a href="#" class="button button-blue button-small">Upload</a>
+            <!--<a href="#" class="button button-blue button-small">Upload</a>-->
             <!-- Label and textarea -->
             <label for="regularTextarea">About Yourself</label>
             <textarea id="regularTextarea"></textarea>
-             <a href="#" class="button button-blue button-small button-right">Update</a>
+             <!--<a href="#" class="button button-blue button-small button-right">Update</a>-->
         </div>
+        <div class="up-buttons one-fourth column">
+           <ul> 
+            <li><a href="#" class="button button-blue button-small">Upload</a></li>
+            <li><a href="#" class="button button-blue button-small button-right">Update</a></li>
+           </ul> 
+        </div>    
 
 
     </div>
