--- a/signup.html
+++ b/signup.html
@@ -27,24 +27,34 @@
           <li><a href="#" class="nav-link">Donate</a></li>
         </ul>
         <ul class="right-nav">
-          <li><a href="#" class="right-navlink">Log In</a></li>
+          <li><a href="editprofile.html" class="right-navlink">Log In</a></li>
         </ul>
       </nav>
     </header>  
 
     <div class="signup-main-image">
       <div class="sign-up container">
-          <div class="header-block-background seven column offset-by-five">
+          <div class="header-block-background">
             <ul class="information">
               <h3>Get Started</h3>
               <input type="text" name="first-name" placeholder="First Name">
               <input type="text" name="last-name" placeholder="Last Name">
               <input type="email" name="email-address" placeholder="Email Address">
-              <a href="#" class="button button-blue button-box">Submit</a>
 
+
+              <a href="editprofile.html" class="button button-blue button-box">Submit</a>
+
+              <div class="f-p">
+                <hr class="or-line">
+                <span class="or">OR</span>
+              </div>  
             <!-- <div class="divider"></div>-->
 
-              <a href="#" class="button button-fb button-box">Connect with Facebook</a>
+              <button class="button button-fb button-box">Connect with Facebook</a>
+                <span class="icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 32 32"><path d="M17.996 32h-5.996v-16h-4v-5.514l4-.002-.007-3.248c0-4.498 1.22-7.236 6.519-7.236h4.412v5.515h-2.757c-2.064 0-2.163.771-2.163 2.209l-.008 2.76h4.959l-.584 5.514-4.37.002-.004 16z"></path></svg>
+                </span>
+              </button>
             </ul>
           </div>
         
